# kdft

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml
crates/bitlocker-decrypt/: Cargo.toml
crates/bitlocker-decrypt/src/: lib.rs
crates/ewf-vendored/: Cargo.toml  README.md
crates/ewf-vendored/src/: error.rs  ewf2.rs  lib.rs  parse.rs  reader.rs  sections.rs  types.rs
crates/ext4-vendored/: Cargo.toml
crates/ext4-vendored/src/: extents.rs  lib.rs  parse.rs
crates/kdft-case/: Cargo.toml
crates/kdft-case/src/: lib.rs
crates/kdft-cli/: Cargo.toml
crates/kdft-cli/src/: main.rs
crates/kdft-ui/: Cargo.toml
crates/kdft-ui/src/: main.rs
schemas/: 001_initial.sql  golden-corpus-manifest.schema.json
scripts/: demo-report.ps1
testdata/golden-corpus/: README.md  minimal-manifest.example.json
testdata/smoke-evidence/: sample.txt
