[workspace]
resolver = "2"
members = [
    "crates/kdft-case",
    "crates/kdft-cli",
    "crates/kdft-ui",
]

[workspace.package]
version = "1.0.3"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
disk-forensic = "0.8.6"
ext4-view = "0.9.3"
fatfs = { version = "0.3.6", default-features = false, features = ["alloc", "std"] }
ntfs = "0.4.0"
positioned-io2 = "0.3.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
vdi = "0.2.0"
