[package]
name = "ext4"
version = "0.9.0"
edition = "2018"
license = "MIT"
description = "Vendored, minimally patched copy of FauxFaux/ext4-rs 0.9.0 (Read information from EXT4 filesystem images)"

[dependencies]
anyhow = "1"
bitflags = "1"
byteorder = "1"
crc = "1"
positioned-io = "0.2"
thiserror = "1"
