[package]
name = "kdft-case"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bitlocker-decrypt = { path = "../bitlocker-decrypt" }
chrono.workspace = true
chrome-cache-parser.workspace = true
disk-forensic.workspace = true
evtx.workspace = true
ext4.workspace = true
fatfs.workspace = true
ntfs.workspace = true
nom.workspace = true
notatin.workspace = true
outlook-pst.workspace = true
positioned-io.workspace = true
positioned-io2.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
vdi.workspace = true
