[package]
name = "kdft-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "kdft-ui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
kdft-case = { path = "../kdft-case" }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
rusqlite.workspace = true
